--- a/app/manifest.json
+++ b/app/manifest.json
@@ -26,6 +26,7 @@
         "https://s3.andrew.cmu.edu/sio/*"
       ],
       "js": [
+        "scripts/extractor.js",
         "scripts/course-planner.js"
       ]
     }
